[gd_scene load_steps=3 format=3 uid="uid://swnjheonun3p"]

[ext_resource type="Script" uid="uid://cmkdyttymnkef" path="res://minigames/hunger/HungerMiniGame.gd" id="1_xmiqa"]
[ext_resource type="Texture2D" uid="uid://da8l1v2rk63ni" path="res://minigames/hunger/pet background.jpg" id="2_b12xw"]

[node name="HungerMiniGame" type="Node2D"]
script = ExtResource("1_xmiqa")

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="TimeLabel" type="Label" parent="."]
offset_left = 25.0
offset_top = 49.0
offset_right = 201.0
offset_bottom = 98.0
text = "Press Start to Begin
"

[node name="HungerBar" type="ProgressBar" parent="."]
offset_right = 255.0
offset_bottom = 27.0
max_value = 10.0

[node name="StartButton" type="Button" parent="."]
offset_left = 297.0
offset_top = 168.0
offset_right = 440.0
offset_bottom = 199.0
text = "Start
"

[node name="PetBackground" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(577.209, 358.813)
scale = Vector2(0.977069, 0.977069)
texture = ExtResource("2_b12xw")

[connection signal="timeout" from="CountdownTimer" to="." method="_on_countdown_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
